# all_project_V1

./: .gitignore
RK/: Makefile  (+1 more)
chenzekai_rag/RagProject/: .gitignore  README.md  pyproject.toml  requirements.txt
chenzekai_rag/RagProject/ai-python/: api.py  main.py
chenzekai_rag/RagProject/ai-python/loaders/: base.py  docx_loader.py  excel_loader.py  pdf_loader.py  pptx_loader.py  txt_loader.py
chenzekai_rag/RagProject/ai-python/nlp/: embedder.py  label_extractor.py  ollama_client.py  report_generator.py  title_generator.py
chenzekai_rag/RagProject/ai-python/prompts/: label.txt  report.txt  title.txt
chenzekai_rag/RagProject/ai-python/taxonomy/: cluster.py  node_suggester.py  store.py
chenzekai_rag/RagProject/ai-python/ui/: index.html
chenzekai_rag/RagProject/ai-python/vectorstore/: faiss_store.py  retriever.py
chenzekai_rag/RagProject/ai-python/workers/: cluster_worker.py  draft_worker.py  enrich_worker.py  ingest_worker.py  rag_worker.py
chenzekai_rag/RagProject/data/: taxonomy.json
chenzekai_rag/RagProject/data/index/: faiss.index  metadata.json
chenzekai_rag/RagProject/data/uploads/: 049a9e4995834226b2ef683dfd988a1e_1.txt  1629d8daa23e4bfba672439a4cdc4550_1.txt  3779d6f0700844bb988d453634a55e5e_科技与人工智能.txt  3cd57ae35ad243efa5889f508e655dbc_alskjgoanioga.txt  3feeae905dfc4366b4d9e750970ea46c_2.txt  6ee4ae22b9214f79be94071c8fff1632_4.txt  9822ded32f9d4d0f914d10ffd53ee8fc_提示词rag.txt
chenzekai_rag/RagProject/tests/: conftest.py
chenzekai_rag/RagProject/tests/fixtures/: sample.txt
chenzekai_rag/RagProject/tests/loaders/: test_txt_loader.py
(+2216 files in other folders)
